# ADS

./: BuildProjectFiles.bat  CMakeLists.txt  VSBuild15.ps1
Praktikum_1/: CMakeLists.txt
Praktikum_1/Aufgabe_1_1/: CMakeLists.txt  List.cpp  List.h  Node.cpp  Node.h  main.cpp
Praktikum_1/Aufgabe_1_2/: CMakeLists.txt  List.h  Node.h  main.cpp
Praktikum_1/Aufgabe_1_3/: CMakeLists.txt  List.h  Node.h  main.cpp  tweet.h
Praktikum_2/: CMakeLists.txt
Praktikum_2/Aufgabe_2_2/: CMakeLists.txt  RingNode.cpp  RingNode.h  Ringbuffer.cpp  Ringbuffer.h  main.cpp
Praktikum_2/Aufgabe_2_3/: CMakeLists.txt  ExportZielanalyse.csv  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h  main.cpp
Praktikum_2/Aufgabe_2_4/: CMakeLists.txt  RingNode.cpp  RingNode.h  Ringbuffer.cpp  Ringbuffer.h  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h  main.cpp
Praktikum_3/: CMakeLists.txt
Praktikum_3/Aufgabe_3_1/: CMakeLists.txt  MyAlgorithms.cpp  MyAlgorithms.h  main.cpp  make_matrixplots.mlab  make_plots.m  make_plots.mlab  matrixplots.gnu  plots.gnu
Praktikum_4/: CMakeLists.txt
Praktikum_4/Aufgabe_4_1/: CMakeLists.txt  P4_graph.cpp  P4_graph.h  P4_graphnode.cpp  P4_graphnode.h  P4_main.cpp
cmake/macros/: AutoCollect.cmake
cmake/platform/: unix.cmake  win.cmake
cmake/platform/compiler/: gcc.cmake  msvc.cmake
